[package]
name = "tsmngr"
version = "0.1.0"
edition = "2021"

authors = ["Nullgrimoire weeks.it.solutions@gmail.com"]
description = "A CLI-based ticket system manager built in Rust"
license = "MIT"
repository = "https://github.com/Nullgrimoire/TSMngr"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4"] }