[package]
name = "tsmngr"
version = "1.1.0-Alpha"
edition = "2021"

authors = ["Nullgrimoire weeks.it.solutions@gmail.com"]
description = "A CLI-based ticket system manager built in Rust"
license = "MIT"
repository = "https://github.com/Nullgrimoire/TSMngr"
readme = "README.md"
build = "build.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4"] }
rusqlite = { version = "0.30", features = ["bundled"] }

[build-dependencies]
embed-resource = "2.4"